--- a/pos.css
+++ b/pos.css
@@ -28,18 +28,44 @@ section:last-of-type{
 
 .electric-purple{
 	background: #C200FB;
-	height: auto;
-	width: inherit;
+	flex-grow: 1;
 }
 
 .raspberry{
 	background: #EC0868;
-	height: auto;
-	width: auto;
+	flex-grow: 1;
 }
 
 .ferrari-red{
 	background: #FC2F00;
-	height: auto;
-	width: auto;
+	flex-grow: 1;
+
+}
+
+.green{
+	background: #006c03;
+	flex-grow: 4;
+}
+.black{
+	background: black;
+	flex-grow: 1;
+	order: -1;
+}
+.col{
+	height: 200px;
+	width: 200px;
+	float: left;
+}
+.row{
+	background-color: yellow;
+}
+.clearfix{
+	clear: both;
+
+}
+
+.flex{
+	display: flex;
+	height: 200px;
+
 }
